replace mp3 audio with text
https://converter.app/mp3-to-text/

--- a/english/c1.md
+++ b/english/c1.md
@@ -56,57 +56,117 @@ How do the views of water companies contrast with the findings of the Marine Con
 
 #### Q10. What makes Paola sad?
 
-
-
-https://github.com/user-attachments/assets/1e6a3ed0-ac66-4e67-b570-a27b6e6ca25b
-
-
+> Hi I'm Paola I am Italian but I grew up in South Africa. I was born in Zimbabwe
+and then my parents moved to South Africa and then subsequently when I was
+21 I moved to Italy and have spent most of my adult life living in Italy and now
+in the UK. I've got a very strange relationship with my accent because I
+think that I speak proper English and I sign like an Englishman but as soon as
+I open my mouth people immediately ask me the question where are you from which
+always throws me a bit because I really don't know how to answer that question.
+Growing up in South Africa I was always referred to as the Italian stallion
+probably because my parents were Italian and because my name is Italian. As soon
+as I moved to Italy when I was 21 and they heard me open my mouth and speak
+Italian with an English accent they used to call me the English girl because
+Italians really don't distinguish between English or British English or
+American English or English from any other English speaking world countries
+so I was always the English girl and then about seven years ago I came to the UK
+and I thought I'd fit in perfectly because I grew up in the British
+colony and I thought I was you know had some kind of affinity with England and
+as soon as I open my mouth once again people said to me where are you from and
+I would say I'm Italian and never say oh so then why do you speak with the South
+African accent and that really upsets me because my cultural identity and my
+upbringing my heritage is Italian and I feel that because I live for protected
+period of time in South Africa that I have somehow gotten accents that doesn't
+fit my personality or who I think I am.
 
 - [x] Although she feels Italian, her accent doesn’t indicate it.
 
 #### Q11. Listen to the text and choose the right answer. What advantages does this man’s Australian accent give him?
 
-
-https://github.com/user-attachments/assets/4219e8ec-da71-48a3-a8f8-0e3724be4772
-
+> I didn't really think about my accent until I left Australia and came to England and it was strange I suppose probably the reaction it got from people is people assumed that I was very laid back very sort of easy going kind of guy,
+which was great in terms of meeting friends you know people want to sort of go for a drink and thought I'd be a good laugh in terms of getting jobs and things that could be a bit of a disadvantage I suppose because people thought that you know maybe I wouldn't take it seriously or that maybe just a bit too laid back for their work I suppose. The honest thing though I think was that the English seemed to have an assumption because I had an Australian accent I must be really good at sport and I particularly cricket which is a very strange thing there was one guy who actually literally asked me to be in his team purely because of the way that I spoke.
+Now I am absolutely terrible at cricket so I turned up played the game was complete disaster was out for a duck and yeah didn't ask me back so that was that.
+But yeah so but it's been good overall I think it comes across well I think.
 
 - [x] He can make friends easily.
 
 #### Q12. Listen to the text and choose the right answer. You are going to hear four people who have migrated talking about their experiences. Which speaker encountered some negative attitudes at the beginning?
 
+```
+I've been here now for about 15 years.
+It's a good life, though I work hard, but frankly I miss my country and the town where I grew up and dream of going back.
+I feel special ties to the place and when I retire I hope to return there to be among my friends and my family.
+Two.
+We were utterly fed up with the crime and feeling of insecurity that surrounded us
+and it was precisely for that reason that we moved away.
+What really worried us was the effect it might have on the kids going to the local school.
+We felt it just wasn't worth the risk.
+On the other hand, it hasn't been easy coping with the language barrier, I have to admit.
+At least not for us parents.
+The kids integrated straight away, of course.
+Three.
+I haven't changed countries but I've moved from the country to the city because it has
+better services and more opportunities.
+I was absolutely astonished to find that many people looked down on me when I first arrived
+which didn't exactly make things easy.
+I suppose they thought, oh here's some country bumpkin come to the city to make good.
+And I guess they were right because I have.
+Four.
+I love lots of things about my country.
+The food, the sense of humour, the newspapers, lots of things.
+Actually, I have to admit it was the climate I couldn't stand any longer.
+I just found the short grey days and the continual rain totally depressing.
+Mind you, the heat sometimes a problem here and then our dream of going home.
+But that's only the odd day here and there.
+Mostly it's fine.
 
-
-https://github.com/user-attachments/assets/b69de9d5-c3ca-4776-86c9-f6f0a09c0a04
-
-
+```
 
 - [x] Speaker 3
 
 #### Q13. Listen to the text and choose the right answer. What accent does this woman say she has?
 
-
-
-https://github.com/user-attachments/assets/c93d527e-2062-44b0-be06-6558f38363b8
-
-
+> I've moved so many times I sort of hardly know what my accent is now.
+Before I was 18 I'd moved 12 times.
+I started out in New England and ended up in the Rocky Mountains and I've spent over
+half my life here in England.
+So I never really got a chance to settle into any particular accent.
+I suppose I'd call my accent now Mid-Atlantic.
+But what's happened to me is that I've ended up not really being from anywhere.
+So when I go to the States they think I'm Irish for some reason.
+And when I am here obviously they know I'm from America but they sort of don't notice.
+So I can fit in or not fit in depending on the circumstances.
+But I'm somewhere in the middle of the ocean.
+And I suppose I'm happy to be there but I have to know who I am and myself because
+people don't really recognize me as being from anywhere.
 
 - [x] She has no distinct accent.
 
 #### Q14. Listen to the text and choose the right answer. You will hear a man talking about tourism. What is his occupation?
 
-
-
-https://github.com/user-attachments/assets/2dac5673-43ad-44ed-adc7-f99d9f47316e
-
-
+> I think there are some wonderful places to visit around the country, and it's my job to try and include them in our publications, particularly for our profitable export market.
+But it's all a bit piecemeal, isn't it?
+Take a accommodation, for example.
+There are some pockets of excellence with great places to stay, run by friendly staff and serving interesting regional food.
+But you should see the pile of correspondence we receive from disappointed tourists.
+It's generally about the mismatch between price and quality.
+It's very hard to know what to recommend when we have to update our accommodation sections, especially in London.
+Quality across the board, that's the way forward.
 
 - [x] a guide book publisher
 
 #### Q15. Listen to the text and choose the right answer. You will hear a woman talking about tourism. What is her occupation?
 
-
-https://github.com/user-attachments/assets/ee577a94-59a8-49f1-89fb-a680892e6cf5
-
+> Increased numbers of visitors would, of course, be a great benefit to the locality.
+My worry is, though, whether we have the infrastructure to cope.
+I'm not really concerned about the bed and breakfast sector.
+There's a certain amount of slack in the system.
+But what about transport?
+The railway line was removed twenty years ago, and the centre gets choked up with cars
+as it is in the summer, all queuing to go through the narrow medieval gateways, which
+are a great photo opportunity, but a nightmare for through traffic.
+Naturally, the pollution levels are rising now from traffic fumes.
+Reinstating the railway connection would get my vote, but it won't be easy.
 
 - [x] a local government official
 
