replace mp3 audio with text
https://converter.app/mp3-to-text/

--- a/english/b1.md
+++ b/english/b1.md
@@ -36,29 +36,87 @@
 
 #### Q9. Listen to the text and choose the right answer. What drinks do they get?
 
-[AUDIO] assets/b1-q9.mp4
+> I'm going to have a coffee. What do you want?
+I'll have an orange juice.
+What about Sally and Tim?
+Get them orange juice too. They said they were thirsty.
+Are you sure? I thought Sally wanted tea.
+No, she wanted something cold.
+Okay then.
 
 - [x] a coffee, a tea, and two orange juices
 
 #### Q10. Listen to the text and choose the right answer. Why doesn’t the woman want anything to eat?
 
+> TBD
+
 - [x] Because she doesn’t feel well
 
 #### Q11. Listen to the text and choose the right answer. The girl’s new boyfriend is…
 
-[AUDIO] assets/b1-q11.mp4
+> So, where did you meet him?
+At work.
+He's one of the designers.
+And what's he like?
+Oh, he's funny, intelligent.
+Yes, but what does he look like?
+Oh, just like Pierce Brosnan.
+Tall, dark and handsome.
+No, I'm joking.
+He's got short, dark hair and he's not very tall, but I think he's really good looking.
+
 
 - [x] short with short dark hair
 
 #### Q12. Listen to the text and choose the right answer. Why doesn’t the man like the Volvo car?
 
-[AUDIO] assets/b1-q12.mp4
+> So, what do you think?
+I think I like the Volvo best.
+It's so comfortable and I love the colour. It's a really nice shade of blue.
+Don't think about the colour. That's a ridiculous reason for buying a car.
+The question is, is the golf big enough?
+There's not much space for luggage. The boot's much smaller than the Volvo's.
+Yes, but think about it. We only go on holiday once a year.
+The rest of the time we only use the boot for shopping.
+The golf will be much easier to park. That's the advantage of a smaller car.
+You know, parking's not your strong point.
+I can park perfectly, thank you very much.
+Come on, what about last week when you scratched the mirror?
+That wasn't parking. It was when I was driving in the high street.
+Anyway, Volvo's are the safest cars on the road. Everybody says so.
+The Volvo's quite a bit more expensive, you know. If we bought it, we'd have to get a bank loan.
+How much more expensive is it?
+About 20% more. We wouldn't be able to go to France this summer.
+What about the perjo? Over there. It's cheaper than the Volvo and the Golf.
+And it's a really sweet yellow.
+Look, we've been here more than an hour and I thought we'd agreed we were going to buy either the Volvo or the Golf.
+Yes. Now I'm not sure.
 
 - [x] It’s quite expensive
 
 #### Q13. Listen to the text and choose the right answer. What car do the man and the woman decide to buy in the end?
 
-[AUDIO] assets/b1-q13.mp4
+> So, what do you think?
+I think I like the Volvo best.
+It's so comfortable and I love the colour. It's a really nice shade of blue.
+Don't think about the colour. That's a ridiculous reason for buying a car.
+The question is, is the golf big enough?
+There's not much space for luggage. The boot's much smaller than the Volvo's.
+Yes, but think about it. We only go on holiday once a year.
+The rest of the time we only use the boot for shopping.
+The golf will be much easier to park. That's the advantage of a smaller car.
+You know, parking's not your strong point.
+I can park perfectly, thank you very much.
+Come on, what about last week when you scratched the mirror?
+That wasn't parking. It was when I was driving in the high street.
+Anyway, Volvo's are the safest cars on the road. Everybody says so.
+The Volvo's quite a bit more expensive, you know. If we bought it, we'd have to get a bank loan.
+How much more expensive is it?
+About 20% more. We wouldn't be able to go to France this summer.
+What about the perjo? Over there. It's cheaper than the Volvo and the Golf.
+And it's a really sweet yellow.
+Look, we've been here more than an hour and I thought we'd agreed we were going to buy either the Volvo or the Golf.
+Yes. Now I'm not sure.
 
 - [x] They can’t decide
 
