--- a/english/b1.md
+++ b/english/b1.md
@@ -44,7 +44,7 @@ Are you sure? I thought Sally wanted tea.
 No, she wanted something cold.
 Okay then.
 
-- [x] a coffee, a tea, and two orange juices
+- [x] a coffee and three orange juices
 
 #### Q10. Listen to the text and choose the right answer. Why doesn’t the woman want anything to eat?
 
